--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: "/tjdyyy" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://tjdyyy.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 
